--- a/styles.css
+++ b/styles.css
@@ -121,7 +121,8 @@ header button {
 }
 
 .intro button:nth-child(2) {
-  background-color: var(--clr-primary-green);
+  background-color: white;
+  border: 1px solid black;
   color: var(--clr-black);
   margin-left: 1rem;
 }
