--- a/styles.css
+++ b/styles.css
@@ -251,14 +251,21 @@ header button {
     position: absolute;
     right: 5%;
     width: 90%;
+    z-index: 5;
+    border-radius: 0.4rem;
+    height: 10vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    box-shadow: 2px 2px 5px lightgray;
     background-color: var(--clr-primary-peach);
     transform: translateY(-300%);
     transition: all 0.01s;
   }
 
   #menu:checked ~ .mobMenu {
-    margin-block: 4rem;
-    transform: translateY(80%);
+    margin-top: 2rem;
+    transform: translateY(25%);
     transition: all 0.2s;
   }
 }
